--- a/ThietKeWeb/Areas/Admin/Views/Admin_Products/Index.cshtml
+++ b/ThietKeWeb/Areas/Admin/Views/Admin_Products/Index.cshtml
@@ -44,7 +44,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ProductName)
             </td>
-            <td>
+            <td width="400">
                 @Html.DisplayFor(modelItem => item.ProductDescription)
             </td>
             <td>
