--- a/ThietKeWeb/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/ThietKeWeb/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -26,383 +26,21 @@
             background-color: gray;
             flex-wrap: wrap;
             align-items: center;
+            padding-right:120px;
+        }
+        li{
+            margin-left:20px;
+        }
+        .nav-link{
+            color:white;
+        }
+        a{
+            text-decoration:none;
         }
 
         .logo {
             width: 100%;
             height: 100px;
-        }
-
-        .head-middle {
-            position: relative;
-        }
-        input{
-            max-width:470px;
-        }
-        .search {
-            margin-left: 5vw;
-            border-radius: 8px;
-            width:450px;
-            padding: 8px;
-            outline: none;
-        }
-        .search-button {
-            position: absolute;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            border: none;
-            cursor: pointer;
-            width: 70px;
-            height: 35px;
-            border-radius: 8px;
-            padding-top: 4px;
-            background: none;
-        }
-
-        .search-image {
-            width: 70px;
-            height: 29px;
-            border-radius: 8px;
-        }
-        .cart {
-            position: relative;
-        }
-
-        .cart-count {
-            position: absolute;
-            right: -17px;
-            top: -3px;
-            background-color: red;
-            color: white;
-            border-radius: 45%;
-        }
-
-        ul {
-            display: flex;
-        }
-
-        .menu {
-            margin-left: 2vw;
-        }
-
-        li {
-            list-style-type: none;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .menu a {
-            color: white;
-            font-size: 18px;
-            text-decoration: none;
-        }
-        #selection {
-            margin-right: 35px;
-            color: white;
-        }
-
-        .selection-image {
-            width: 20px;
-            height: 20px;
-            margin-right: 4px;
-        }
-
-        .image1 {
-            display: block;
-            width: 100%;
-            height: 50%;
-            border-radius: 2px;
-        }
-
-        .image2 {
-            display: block;
-            width: 100%;
-            height: 50%;
-            border-radius: 2px;
-        }
-
-        .ad {
-            clear: both;
-            display: flex;
-            align-items: center;
-        }
-        .list-background {
-
-            width: 100%;
-            height:40px;
-        }
-
-        .list {
-            display: flex;
-            align-items: center;
-        }
-
-        .menu1 {
-            color: white;
-            margin-left: 10vw;
-            display: inline-block;
-            block-size: 40px;
-            text-decoration: none;
-            transition: all 0.2s ease;
-        }
-
-            .menu1:hover {
-                display: block;
-                color:white;
-                background-color: #53382C;
-            }
-
-        .menu2 {
-            margin-left: 150px;
-            color: white;
-            text-decoration: none;
-            display: inline-block;
-            block-size: 40px;
-            transition: all 0.2s ease;
-        }
-
-            .menu2:hover {
-                display: block;
-                color: white;
-                background-color: #53382C;
-            }
-
-        .menu3 {
-            margin-left: 150px;
-            color: white;
-            display: inline-block;
-            block-size: 40px;
-            text-decoration: none;
-            transition: all 0.2s ease;
-        }
-
-            .menu3:hover {
-                display: block;
-                color: white;
-                background-color: #53382C;
-            }
-
-        .list li {
-            cursor: pointer;
-            position: relative;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            list-style-type: none;
-            z-index: 1;
-            left: -19.95vw;
-            top: 100%;
-            width: 100vw;
-        }
-
-        .dropdown-content-list {
-            width: 100vw;
-            height: 250px;
-            text-align: center;
-            margin-top: 15px;
-            white-space: nowrap;
-        }
-
-        .dropdown-content a {
-            text-decoration: none;
-            transition: all 0.2s ease;
-            color: #ffcc00;
-        }
-        .content {
-            margin-left:30px;
-        }
-
-        .dropdown-content li a:hover {
-            background-color: inherit;
-        }
-
-        .dropdown-btn:hover .dropdown-content {
-            display: flex;
-            background-color: #53382C;
-        }
-
-        .menu2:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-content {
-            background-color: transparent;
-            transition: all 0.6s ease;
-        }
-
-        .dropdown-content-1 {
-            display: none;
-            position: absolute;
-            list-style-type: none;
-            z-index: 1;
-            left: -59.5vw;
-            top: 100%;
-            width: 100vw;
-        }
-
-            .dropdown-content-1 a {
-                text-decoration: none;
-                transition: all 0.2s ease;
-                color: #ffcc00;
-            }
-
-            .dropdown-content-1 li a:hover {
-                letter-spacing: 2px;
-                background-color: inherit;
-            }
-
-        .dropdown-btn:hover .dropdown-content-1 {
-            display: flex;
-            background-color: #53382C;
-        }
-
-        .menu2:hover .dropdown-content-1 {
-            display: block;
-        }
-
-        .dropdown-content-1 {
-            background-color: transparent;
-            transition: all 0.6s ease;
-        }
-
-        .prod-name {
-            display: flow;
-            padding-top: 4px;
-        }
-
-        .prod-name-list {
-            text-decoration: none;
-        }
-
-        .prod-name a {
-            color: white;
-            position: relative;
-            text-decoration: none;
-            transition: all 0.2s ease;
-        }
-
-        .prod-name li a:hover {
-            color: lightpink;
-        }
-
-        .prod-name li a::after {
-            position: absolute;
-            content: '\203A';
-            left: -50px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .prod-name li a:hover::after {
-            opacity: 1;
-        }
-
-        #featureProd {
-            text-align: center;
-            background-color: antiquewhite;
-        }
-
-        .prod-list {
-            width: 100%;
-            background-color: yellowgreen;
-            height: 30px;
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            font-size: 20px;
-            vertical-align: middle;
-        }
-
-        .prod-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: auto;
-        }
-
-        .prod-container-2 {
-            display: flex;
-            align-items: center;
-            overflow: auto;
-            white-space: nowrap;
-        }
-
-        .prod {
-            width: 200px;
-        }
-
-        .prod-item {
-            width: 100%;
-            height: 150px;
-            transition: transform 0.2s ease;
-        }
-
-            .prod-item:hover {
-                transform: translateY(-5px);
-            }
-
-        .prod-item-special1 {
-            width: 100px;
-            height: 150px;
-            transition: transform 0.2s ease;
-        }
-
-            .prod-item-special1:hover {
-                transform: translateY(-5px);
-            }
-
-        .prod-item-special2 {
-            width: 150px;
-            height: 150px;
-            transition: transform 0.2s ease;
-        }
-
-            .prod-item-special2:hover {
-                transform: translateY(-5px);
-            }
-
-        .prod-item-special3 {
-            width: 120px;
-            height: 150px;
-            transition: transform 0.2s ease;
-        }
-
-            .prod-item-special3:hover {
-                transform: translateY(-5px);
-            }
-
-        .prod-item-special4 {
-            width: 180px;
-            height: 150px;
-            transition: transform 0.2s ease;
-        }
-
-            .prod-item-special4:hover {
-                transform: translateY(-5px);
-            }
-
-        h3 {
-            font-size: 16px;
-            color: yellowgreen;
-        }
-
-        .prod-description {
-            font-size: 14px;
-            color: black;
-            font: Arial;
-            width: 100%;
-        }
-
-        .prod-price {
-            font-size: 12px;
-            color: green;
-            margin-left: 30px;
         }
 
         #footer {
@@ -457,84 +95,23 @@
     </style>
 </head>
 <body>
-    <header class="header d-flex">
-        <a href="~/Home/Index"><img src="~/Content/images/logo1.png" class="logo" /></a>
-        <div class="head-middle">
-            <input type="text" class="form-control search" placeholder="Mời nhập nước uống bạn muốn" />
-            <button type="button" class="search-button">
-                <img src="~/Content/images/search-icon.JPG" class="search-image" />
+    <header class="header navbar navbar-expand-sm">
+        <div class="container ">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-        </div>
-        <ul class="menu">
-            <li><a href="~/Home/GioHang" id="selection" class="cart"><img src="~/Content/images/Shopping-cart-icon.png" class="selection-image" />Giỏ hàng<i class="fas fa-circle"><span class="cart-count">0</span></i></a></li>
-            <li><a href="~/Home/Favourite" id="selection"><img src="~/Content/images/Heart-icon.png" class="selection-image" />Yêu thích</a></li>
-            <li><a href="~/Home/LogIn" id="selection"><img src="~/Content/images/Character-icon.png" class="selection-image" />Đăng Nhập/Đăng Ký</a></li>
-        </ul>
-        <div class="list-background">
-            <ul class="list">
-                <li><a href="~/Home/Index" class="menu1">Trang chủ</a></li>
-                <li class="dropdown-btn">
-                    <a href="~/Home/ProDuctDetail" class="menu2">Thực đơn</a>
-                    <ul class="dropdown-content">
-                        <li class="dropdown-content-list">
-                            <a href="" class="content">Cà phê</a>
-                            <ul class="prod-name">
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/CaPheDen">Cà phê đen</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/BacSiu">Bạc Sỉu</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/CapheCaramel">Cà phê Caramel</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-content-list">
-                            <a href="" class="content">Trà</a>
-                            <ul class="prod-name">
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraDau">Trà Dâu</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraThachDau">Trà Thạch Dâu</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraNho">Trà Nho</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraVai">Trà Vải</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraDen">Trà Đen</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-content-list">
-                            <a href="" class="content">Đá Xay</a>
-                            <ul class="prod-name">
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/OreoDaXay">Oreo Đá Xay</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/MiloDaXay">Milo Đá Xay</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/SocolaDaXay">Socola Đá Xay</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/CaramelDaXay">Caramel Đá Xay</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/DauDaXay">Dâu Đá Xay</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/MatchaSocolaDaXay">Matcha Socola Đá Xay</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-content-list">
-                            <a href="" class="content">Khác</a>
-                            <ul class="prod-name">
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/Matcha">Matcha</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/ChanhTacMatOng">Chanh Tắc Mật Ong</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/SodaChanh">Soda Chanh</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/SuaTuoiTranChauDuongNau">Sữa Tươi Trân Châu Đường Nâu</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTruyenThong">Trà Sữa Truyền Thống</a></li>
-                                <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTranChauTrang">Trà Sữa Trân Châu Trắng</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="~/Home/Recruit" class="menu3">Tuyển dụng</a></li>
-                <li class="dropdown-btn">
-                    <a href="~/Home/About us" class="menu3">Về chúng tôi</a>
-                    <ul class="dropdown-content-1">
-                        <li class="dropdown-content-list">
-                            <a href="~/Home/NguonGoc" class="content1">Nguồn gốc</a>
-                        </li>
-                        <li class="dropdown-content-list">
-                            <a href="~/Home/DichVu" class="content1">Dịch Vụ</a>
-                        </li>
-                        <li class="dropdown-content-list">
-                            <a href="~/Home/NgheNghiep" class="content1">Nghề nghiệp</a>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
-            </ul>
+            <a href="@Url.Action("Index", "TrangChu")"><img src="~/Content/images/logo1.png" class="logo" /></a>
+            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li>@Html.ActionLink("Home", "Index", "Admin/TrangChu", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Danh mục", "Index", "Admin/Admin_Categories", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Sản phẩm", "Index", "Admin/Admin_Products", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Khách hàng", "Index", "Admin/Admin_Customers", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Đơn hàng", "Index", "Admin/Admin_Orders", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Tài khoản", "Index", "Admin/Admin_Users", new { area = "" }, new { @class = "nav-link" })</li>
+                </ul>
+            </div>
         </div>
     </header>
    
