--- a/ThietKeWeb/Views/Home/Address.cshtml
+++ b/ThietKeWeb/Views/Home/Address.cshtml
@@ -34,17 +34,23 @@
             background-color: #f9f9f9;
         }
 
-        caption {
+        label {
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
+            color: deeppink;
+        }
+        div {
+            text-align:center;
         }
     </style>
 </head>
 <body>
 
+    <div>
+        <label>Hệ Thống Cửa Hàng Baron Drinks</label>
+    </div>
     <table>
-        <caption>Hệ Thống Cửa Hàng Baron Drinks</caption>
         <thead>
             <tr>
                 <th>QUẬN/HUYỆN</th>
