--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -25,7 +25,7 @@
         <input type="checkbox"/> Remember Password?
         <button type="button" onclick="return ValiDate()" class="login-submit">Login</button>
         <p class="login-forgot">
-            <a href="">Forgot password?</a>
+            <a href="" class="login-forgot">Forgot password?</a>
             <a href="~/Home/Register" class="login-signup-link">Sign up</a>
         </p>
     </div>
