--- a/ThietKeWeb/Views/Home/NguonGoc.cshtml
+++ b/ThietKeWeb/Views/Home/NguonGoc.cshtml
@@ -5,28 +5,44 @@
 }
 
 <style type="text/css">
-    section{
-        font-size:24px;
-        background-color:white;
+    section {
+        font-size: 24px;
+        background-color: white;
     }
-    h1{
-        text-align:center;
+        h1 {
+        padding: 20px;
+        text-align: center;
+        color: #36100a;
+    }
+
+    #content {
+        padding: 30px 50px;
+        color: #36100a;
+    }
+
+    h1 {
+        text-align: center;
+    }
+        .right-image {
+        float: right;
+        margin-left: 30px;
+        width: 120px;
+        height: 200px;
     }
 </style>
 
 <section>
-    <h1>NGUỒN GỐC</h1>
-    <div>
-        <p>CÂU CHUYỆN NÀY LÀ CỦA CHÚNG MÌNH</p>
-        <p>
-            Baron Coffee® được thành lập vào năm 2018, bắt nguồn từ tình yêu dành cho đất Việt cùng với cà phê và cộng đồng nơi đây. Tinh thần cộng đồng luôn chảy trong ADN của mỗi người Việt mình. Ngay từ những ngày đầu tiên, mục tiêu của chúng mình là có thể phục vụ và góp phần phát triển cộng đồng bằng cách siết chặt thêm sự kết nối và sự gắn bó giữa người với người. Ngày hôm nay, với hàng trăm cửa hàng trên khắp Việt Nam và trên Thế Giới, thứ chúng mình đem lại không chỉ dừng lại ở cà phê. Chúng mình còn là nơi để thuộc về, là nơi để kết nối tất cả mọi người với nhau. Từ đó, Baron Coffee® trở thành nơi dành riêng cho cộng đồng.
-        </p>
-        <br />
-        <p>
-            Trong tương lai, chúng mình sẽ luôn thấy một Việt Nam đang phát triển và một Baron Coffee® không ngừng cải tiến. Baron Coffee® - điểm tụ họp của cộng đồng, nơi mọi người có thể kết nối và gắn kết với nhau bằng tình yêu dành cho cà phê, trà và các món ăn ngon. Tại Highlands Coffee®, chúng mình luôn sát cánh cùng bạn, chúng mình luôn ủng hộ bạn và chúng mình luôn đồng hành với nhau như một cộng đồng.
-        </p>
-        <br />
-        <p>Baron Coffee® Là Của Chúng Mình.</p>
+    <h1><strong>NGUỒN GỐC</strong></h1>
+    <div style="color: forestgreen; text-align: center"> Lá trà Thái Nguyên | Cà phê Buôn Ma Thuột</div>
+    <div id="content">
+        <h6>
+            <img src="~/Content/images/coffee.png" class="right-image">
+            <img src="~/Content/images/tea1.png" class="right-image">
+            <p><em>"BARON COFFEE® LÀ CỦA CHÚNG MÌNH"</em></p>
+            <p><small>Baron Coffee® được thành lập vào năm 2018, bắt nguồn từ tình yêu dành cho đất Việt cùng với hương thơm lá trà Thái Nguyên, kết hợp với mùi hương quyến rũ của cà phê. Dựa trên tinh thần cộng đồng luôn chảy trong ADN của mỗi người Việt mình. Ngay từ những ngày đầu tiên, mục tiêu của chúng mình là có thể phục vụ và góp phần phát triển cộng đồng bằng cách siết chặt thêm sự kết nối và sự gắn bó giữa người với người. Ngày hôm nay, với hàng trăm cửa hàng trên khắp Việt Nam và trên Thế Giới, thứ chúng mình đem lại không chỉ dừng lại ở cà phê. Chúng mình còn là nơi để thuộc về, là nơi để kết nối tất cả mọi người với nhau. Từ đó, Baron Coffee® trở thành nơi dành riêng cho cộng đồng. </small></p>
+            <p><small> Trong tương lai, chúng mình sẽ luôn thấy một Việt Nam đang phát triển và một Baron Coffee® không ngừng cải tiến. Baron Coffee® - điểm tụ họp của cộng đồng, nơi mọi người có thể kết nối và gắn kết với nhau bằng tình yêu dành cho cà phê, trà và các món ăn ngon. Tại Baron Coffee®, chúng mình luôn sát cánh cùng bạn, chúng mình luôn ủng hộ bạn và chúng mình luôn đồng hành với nhau như một cộng đồng.</small></p>
+
+        </h6>
     </div>
 </section>
 
