--- a/ThietKeWeb/Views/ProDuctDetail/BacSiu.cshtml
+++ b/ThietKeWeb/Views/ProDuctDetail/BacSiu.cshtml
@@ -40,8 +40,13 @@
         }
 
         .image {
+            display: block;
             background-color: antiquewhite;
+            border: hidden;
+            width: 550px;
+            height: 600px;
             margin-left: 50px;
+            text-align: center;
         }
 
         form {
@@ -66,12 +71,12 @@
         }
 
         a {
-            width: 500px;
+            width: 200px;
             text-align: center;
         }
 
         #button {
-            padding-top: 80px;
+            padding-top: 85px;
         }
 
         .ProdDescription {
@@ -84,7 +89,7 @@
             padding: 10px 20px;
             font-size: 16px;
             color: black;
-            background-color: none; /* Màu nền mặc định */
+            background-color: none; 
 
             border: 1px solid #cccc;
             border-radius: 5px;
@@ -94,7 +99,7 @@
         }
 
             button.selected {
-                background-color: forestgreen; /* Màu khi được chọn */
+                background-color: forestgreen; 
             }
 
         .group {
@@ -105,7 +110,7 @@
 <body>
     <div class="container">
         <div class="image">
-            <img src="~/Content/images/sp3.png" width="550" height="500" />
+            <img src="~/Content/images/sp3.png" width="500" height="500" style="margin-top:30px"/>
         </div>
         <div class="ProdInfo">
             <label>Bạc Sỉu</label>
@@ -117,7 +122,7 @@
             <div class="group">
                 <button class="optionButton" data-group="1" onclick="selectOption(this)">Nhỏ + 0 đ</button>
                 <button class="optionButton" data-group="1" onclick="selectOption(this)">Vừa + 10.000 đ</button>
-                <button class="optionButton" data-group="1" onclick="selectOption(this)">Lớn + 16.000đ</button>
+                <button class="optionButton" data-group="1" onclick="selectOption(this)">Lớn + 16.000 đ</button>
             </div>
             <p class="ProdType">Topping</p>
             @*<form>
@@ -127,7 +132,7 @@
             <div class="group">
                 <button class="optionButton" data-group="2" onclick="selectOption(this)">Sốt Caramel + 10.000 đ</button>
                 <button class="optionButton" data-group="2" onclick="selectOption(this)">Shot Expresso + 10.000 đ</button>
-                <button class="optionButton" data-group="2" onclick="selectOption(this)">Trân châu trắng + 10.000đ</button>
+                <button class="optionButton" data-group="2" onclick="selectOption(this)">Trân Châu Trắng + 10.000 đ</button>
             </div>
             @*<form class="ProdType">
                     <input type="submit" class="btn btn-default" value="Trân châu trắng + 10.000 đ " />
